# iammusic

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py
app/models/: annotations.py  songs.py
