[tool.poetry]
name = "iammusic"
version = "0.1.0"
description = ""
authors = ["RauanKassymkhanov <rauan2001kz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
alembic = "^1.15.2"
pydantic = "^2.11.3"
pydantic-settings = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
